# textbridge

./: .gitignore  README.md  flake.nix  textbridge_wifi_mvp_plan.md
scripts/: android-doctor
skills/local/android-dev/: SKILL.md
textbridge/: README.md
textbridge/android/: settings.gradle.kts
textbridge/android/app/: build.gradle.kts
textbridge/android/app/src/main/: AndroidManifest.xml
textbridge/android/app/src/main/java/io/github/textbridge/android/: BluetoothClient.kt  CommitClient.kt  DiscoveryClient.kt  MainActivity.kt  SendHistoryCodec.kt  SettingsStore.kt  TextBridgeModels.kt  TextBridgeScreen.kt  TextBridgeTheme.kt  TextBridgeViewModel.kt
textbridge/android/app/src/main/res/layout/: activity_main.xml
textbridge/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
textbridge/android/app/src/test/java/io/github/textbridge/android/: BluetoothCommitProtocolTest.kt  CommitProtocolTest.kt  DiscoveryProtocolTest.kt  SendHistoryCodecTest.kt  TextBridgeViewModelTest.kt
textbridge/desktop/fcitx5-addon/: CMakeLists.txt
textbridge/desktop/fcitx5-addon/data/: textbridge.conf.in
textbridge/desktop/fcitx5-addon/src/: textbridge.cpp
textbridge/desktop/server/: config.example.json  test_textbridge_bluetooth_server.py  test_textbridge_server.py  textbridge-bluetooth-server.service  textbridge-server.service  textbridge_bluetooth_server.py  textbridge_server.py
textbridge/tools/: send_test.py  test_textbridge_adb_connect.py  textbridge-adb-connect
